fix: address Phase 5 voice CodeRabbit issues
JarvisProperties:
- Add VoiceProperties + WhisperProperties + TtsProperties
  properly nested and wired into root record
  jarvis.voice.tts.voice + speed now correctly bind
  Previously TtsProperties was orphaned (never bound)

SystemTextToSpeechService:
- macOS: remove Samantha hardcode when speed-only set
  Only adds -v flag when voiceName is explicitly set
  Empty voiceName = system default voice preserved
- Festival: write text to stdin after start()
  Previous: no input → hangs until timeout
  Now: OutputStream.write(safe) + flush()
- generateMacAudio(): apply voiceSpeed via -r flag
  speak()/generateAudioBytes() path now respects speed
  Uses shared buildMacProcess() for consistency
- generateLinuxAudio(): apply voiceSpeed via -s flag
  Both playback and file generation now respect speed